--- a/Pedido.html
+++ b/Pedido.html
@@ -2,7 +2,7 @@
 <!-- 
 Tutorial: https://www.youtube.com/watch?v=zxxB9SFh9p4
 -->
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@ Tutorial: https://www.youtube.com/watch?v=zxxB9SFh9p4
 
 <body>
     <div id="conteudo">
-        <h2>Aceita tomar uma comigo?</h2>
+        <h2>Aceita Namorar Comigo ?</h2>
         <div style="margin: auto;width: 170px;">
             <button style="position: fixed;display: block;" class="btn" onclick="sim()">SIM</button>
             <button class="btn" onclick="desvia(this)" onmouseover="desvia(this)" style="position: absolute;">NÃO</button>
@@ -22,7 +22,7 @@ Tutorial: https://www.youtube.com/watch?v=zxxB9SFh9p4
 </body>
 <style>
     #conteudo {
-        background: rgb(31, 194, 253);
+        background: red;
         width: 100%;
         height: 100%;
         position: fixed;
@@ -45,7 +45,7 @@ Tutorial: https://www.youtube.com/watch?v=zxxB9SFh9p4
 
 <script>
     function sim() {
-        alert("Você aceitou tomar uma comigo :)");
+        alert("Você aceitou namorar comigo !!");
         // redireciona para um URL após clicar no SIM
         location.href = "https://music.youtube.com/watch?v=izGwDsrQ1eQ";
     }
@@ -65,3 +65,4 @@ Tutorial: https://www.youtube.com/watch?v=zxxB9SFh9p4
 </script>
 
 </html>
+
